--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,12 +20,12 @@
             app:popupTheme="@style/AppTheme.PopupOverlay">
 
             <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/profile_image_main"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:src="@drawable/ic_profile"
                 android:tint="@android:color/white"
-                android:id="@+id/profile_image_main">
-            </de.hdodenhof.circleimageview.CircleImageView>
+              />
             <TextView
                 android:id="@+id/username_main"
                 android:layout_width="wrap_content"
