--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -89,6 +89,18 @@
         app:layout_constraintStart_toEndOf="@+id/settings_instagram"
         app:layout_constraintTop_toBottomOf="@+id/settings_card_view" />
 
+    <ProgressBar
+        android:id="@+id/settings_progress_bar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible"
+        android:visibility="gone"/>
+    
 </androidx.constraintlayout.widget.ConstraintLayout>
 
     <!--    <androidx.cardview.widget.CardView-->
