--- a/app/src/main/res/layout/activity_chat_message.xml
+++ b/app/src/main/res/layout/activity_chat_message.xml
@@ -72,6 +72,8 @@
         android:hint="Write message here..."
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recycler_view_chat_message"
+        app:layout_constraintStart_toEndOf="@id/attach_image_button"
+        app:layout_constraintEnd_toStartOf="@+id/send_message_button"
         tools:layout_editor_absoluteX="64dp" />
 
     <ImageView
