--- a/app/src/main/res/layout/activity_chat_message.xml
+++ b/app/src/main/res/layout/activity_chat_message.xml
@@ -91,4 +91,16 @@
         app:layout_constraintTop_toBottomOf="@+id/recycler_view_chat_message"
         app:layout_constraintVertical_bias="0.0" />
 
+    <ProgressBar
+        android:id="@+id/chat_message_progress_bar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible"
+        android:visibility="gone"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
