Implemented layouts to display chat messages of sender and receiver

--- a/app/src/main/res/layout/message_item_right.xml
+++ b/app/src/main/res/layout/message_item_right.xml
@@ -6,25 +6,43 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="8dp"
-    android:layout_margin="4dp">
+    android:layout_marginLeft="100dp">
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/profile_image_message_item_left"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:src="@drawable/profile_image"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        android:visibility="gone"
+        />
 
     <TextView
-        android:id="@+id/text_message_right"
-        android:layout_width="0dp"
+        android:id="@+id/chat_message"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/background_right"
-        android:textColor="@android:color/white"
         android:padding="8dp"
+        android:textColor="@android:color/white"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
         tools:text="Text message" />
 
     <ImageView
-        android:id="@+id/image_view_left_message_item"
+        android:id="@+id/image_view_right_message_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
@@ -34,17 +52,19 @@
         android:visibility="gone"/>
 
     <TextView
-        android:id="@+id/seen_text_message_item_left"
+        android:id="@+id/seen_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:padding="8dp"
+        android:layout_marginBottom="8dp"
+        android:padding="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/text_message_right"
+        app:layout_constraintTop_toBottomOf="@id/chat_message"
         tools:text="seen" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
