--- a/app/src/main/res/layout/message_item_left.xml
+++ b/app/src/main/res/layout/message_item_left.xml
@@ -10,6 +10,8 @@
         android:id="@+id/profile_image_message_item_left"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
         android:src="@drawable/profile_image"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -17,43 +19,46 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/show_text_message_item_left"
+        android:id="@+id/chat_message"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/background_left"
+        android:padding="8dp"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/profile_image_message_item_left"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        tools:text="Text message"
-        android:textSize="16sp"
-        android:padding="8dp"
-        android:background="@drawable/background_left"/>
+        tools:text="Text message" />
 
     <ImageView
-        android:id="@+id/image_view_left_message_item"
+        android:id="@+id/image_view_left"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@+id/profile_image_message_item_left"
-        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginStart="8dp"
-        android:visibility="gone"/>
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginEnd="8dp"/>
 
     <TextView
-        android:id="@+id/seen_text_message_item_left"
+        android:id="@+id/seen_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="4dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:padding="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/show_text_message_item_left"
+        app:layout_constraintTop_toBottomOf="@id/chat_message"
+        app:layout_constraintVertical_bias="0.0"
         tools:text="seen" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
