--- a/app/src/main/res/layout/activity_chat_message.xml
+++ b/app/src/main/res/layout/activity_chat_message.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#e6e6e6"
+    android:background="@android:color/white"
     tools:context=".view.ui.activities.ChatMessageActivity">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -45,7 +45,7 @@
         android:id="@+id/recycler_view_chat_message"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="#fff"
+        android:background="#e6e6e6"
         app:layout_constraintBottom_toTopOf="@+id/attach_image_button"
         app:layout_constraintTop_toBottomOf="@+id/appbar_chat_message" />
 
@@ -53,7 +53,7 @@
         android:id="@+id/attach_image_button"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
@@ -69,6 +69,7 @@
         android:layout_height="38dp"
         android:background="@android:color/transparent"
         android:hint="Write message here..."
+        android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recycler_view_chat_message"
         app:layout_constraintStart_toEndOf="@id/attach_image_button"
@@ -80,7 +81,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/icon_send_message"
         app:layout_constraintBottom_toBottomOf="parent"
