--- a/app/src/main/res/layout/activity_chat_message.xml
+++ b/app/src/main/res/layout/activity_chat_message.xml
@@ -27,7 +27,8 @@
                 android:id="@+id/profile_image_chat_message"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
-                android:src="@drawable/profile_image" />
+                android:src="@drawable/profile_image"
+                />
 
             <TextView
                 android:id="@+id/username_chat_message"
@@ -38,6 +39,7 @@
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
                 android:textStyle="bold" />
+
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -69,7 +71,6 @@
         android:layout_height="38dp"
         android:background="@android:color/transparent"
         android:hint="Write message here..."
-        android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recycler_view_chat_message"
         app:layout_constraintStart_toEndOf="@id/attach_image_button"
