--- a/app/src/main/res/layout/message_item_left.xml
+++ b/app/src/main/res/layout/message_item_left.xml
@@ -60,6 +60,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/chat_message"
         app:layout_constraintTop_toBottomOf="@+id/chat_message"
-        tools:text="seen" />
+        tools:text="seen"
+        android:visibility="gone"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
